# toolkit-eval-harness

./: .coverage  .env.example  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: CODEBASE_MAP.md  SYSTEM_CONSTITUTION.md
docs/audits/: EVAL_HARNESS_AUDIT_REPORT_2026-03-09.md  EVAL_HARNESS_FULL_AUDIT_2026-04-04.md
examples/: basic_evaluation.py
src/toolkit_eval_harness/: __init__.py  cli.py  compare.py  config.py  formatters.py  health.py  io.py  logging_config.py  metrics.py  monitoring.py  pack.py  plugins.py  report.py  runner.py  scoring.py  signing.py  suite.py
src/toolkit_eval_harness/control_plane/: __init__.py  config.py  contracts.py  tool_specs.py
tests/: test_adversarial.py  test_cli.py  test_compare_and_scoring.py  test_comprehensive.py  test_control_plane.py  test_enhancements.py  test_formatters.py  test_observability.py  test_pack_and_run.py  test_pack_load_twice.py  test_plugins.py
